# homebox_labels

./: .editorconfig  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  domain_data.py  domain_types.py  fonts.py  homebox_api.py  homebox_labels.py  homebox_labels_web.py  homebox_locations.py  label_content.py  label_data.py  label_generation.py  label_types.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
label_templates/: __init__.py  avery5163.py  avery5163_vert.py  base.py  label_data.py  label_generation.py  label_types.py  ptouch.py  types.py  utils.py
label_templates/avery5163/: __init__.py  avery5163.py  common.py  horizontal.py  vertical.py
static/css/: main.css
static/js/: choose.js
stubs/fitz/: __init__.pyi
stubs/reportlab/lib/: pagesizes.pyi  units.pyi  utils.pyi
stubs/reportlab/pdfbase/: __init__.pyi  pdfmetrics.pyi  ttfonts.pyi
stubs/reportlab/pdfgen/: __init__.pyi  canvas.pyi
templates/: assets.html  choose.html  index.html  locations.html
tests/: test_homebox_api.py  test_label_data.py  test_label_utils.py  test_web.py
