[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "**/.venv",
  ".ruff_cache",
]
max-line-length = 100

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "**/.venv",
  "**/__pycache__",
  "**/.ruff_cache",
]

[tool.pyright.diagnosticSeverityOverrides]
reportAttributeAccessIssue = "none"
